force-app/main/default/objects/Process_Review_Checklist_Detail__c/Process_Review_Checklist_Detail__c.object-meta.xml
<CustomObject>
    <label>Process Review Checklist Detail</label>
    <nameField>
        <label>Process Review Checklist Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Review Checklist Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>