force-app/main/default/objects/Process_Review_Checklist_Detail__c/fields/Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Name__c</fullName>
    <label>Checklist Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>