force-app/main/default/objects/Process_Review_Checklist_Detail__c/fields/Process_Review_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Process_Review_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Review Checklist</label>
    <referenceTo>Process_Review_Checklist__c</referenceTo>
    <relationshipLabel>Process Review Checklist Details</relationshipLabel>
    <relationshipName>Process_Review_Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>