force-app/main/default/objects/Process_Review_Checklist_Detail__c/fields/Review_For_Related_PPTD__c.field-meta.xml
<CustomField>
    <fullName>Review_For_Related_PPTD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review For Related PPTD</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Review Checklist Details</relationshipLabel>
    <relationshipName>Process_Review_Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>