force-app/main/default/objects/Process_Review_Checklist_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checklist_Name__c</columns>
    <columns>Process_Review_Checklist__c</columns>
    <columns>Review_For_Related_PPTD__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>